--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,5 +1,6 @@
 eclipse.preferences.version=1
 encoding//WebRoot/sysAdmin/roleInfo/roleFuncPop.jsp=UTF-8
 encoding//WebRoot/update.html=GB2312
+encoding//src/com/care/common/config/Config.java=UTF-8
 encoding//src/log4j.properties=UTF-8
 encoding/<project>=UTF-8
