--- a/WebRoot/WEB-INF/classes/.gitignore
+++ b/WebRoot/WEB-INF/classes/.gitignore
@@ -1,1 +1,8 @@
+/META-INF
+/applicationContext-dyconfig.xml
+/applicationContext-local.xml
 /com
+/jdbc.properties
+/log4j.properties
+/server.properties
+/sql-map-config.xml
