--- a/src/jdbc.properties
+++ b/src/jdbc.properties
@@ -2,6 +2,6 @@ jdbc.driverClassName=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://localhost:3306/xmlpei?useUnicode=true&characterEncoding=UTF-8
 jdbc.username=root
 #jdbc.password=ssrh@1015
-#jdbc.password=fDAf0#4Y0kDb!!lf
-jdbc.password=123456
+jdbc.password=fDAf0#4Y0kDb!!lf
+#jdbc.password=123456
   
