--- a/src/jdbc.properties
+++ b/src/jdbc.properties
@@ -1,7 +1,8 @@
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/xmlpei?useUnicode=true&characterEncoding=UTF-8
-jdbc.username=root
-jdbc.password=abc-123
+#jdbc.url=jdbc:mysql://localhost:3306/shoubiaoweb?useUnicode=true&characterEncoding=UTF-8
+jdbc.url=jdbc:mysql://rm-8vb7pri1vrboyx9e8.mysql.zhangbei.rds.aliyuncs.com:3306/watch?useUnicode=true&characterEncoding=utf8
+jdbc.username=watch
+jdbc.password=ssrh@1015
 #jdbc.password=fDAf0#4Y0kDb!!lf
 #jdbc.password=123456
   
